--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -1,9 +1,10 @@
 .navbar {
-    height: 7vh;
+    height: 75px;
     background-color:darkslategray;
-    display: flex;
     text-align: center;
     color: white;
+    position: sticky;
+    top: 0;
 }
 
 .navbar img {
@@ -12,12 +13,21 @@
 
 .navbar h3 {
     position: absolute;
+    margin-top: 30px;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 .google-account-info {
-    position: absolute;
-    right: 5%;
-    margin-top: 7px;
+    display: flex;
+    margin-top: 20px;
+    float: right;
+    margin-right: 15px;
+}
+
+@media (max-width: 580px) {
+    .google-account-info .acc-chip span, .google-account-info .acc-ava{
+        display: none;
+        visibility: hidden;
+    }
 }
