updates + like function

--- a/src/UI/ImageCarousel/ImageCarousel.css
+++ b/src/UI/ImageCarousel/ImageCarousel.css
@@ -20,3 +20,15 @@
 .delete-icon {
     cursor: pointer;
 }
+
+.favButton svg{
+    fill: currentColor;
+    pointer-events: all;
+    cursor: pointer;
+}
+
+.favButton.clicked svg {
+    fill: red;
+    pointer-events: none;
+    cursor: default;
+}
