--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -35,3 +35,11 @@
 .horizontal-break {
     width: 90%;
 }
+
+.load-more-icon {
+    margin-bottom: 40px;
+    cursor: pointer;
+    background-color: #3f51b5;
+    border-radius: 100%;
+    color: white;
+}
