--- a/src/UI/Card/Card.css
+++ b/src/UI/Card/Card.css
@@ -1,10 +1,11 @@
 .card {
     width: 300px;
     margin: 0px 15px 15px 15px;
+    box-shadow: 5px -5px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 0px 3px 0px rgba(0,0,0,0.12) !important; 
 }
 
 .card.complete {
-    background-color: rgb(124, 221, 124);
+    background-color: rgb(159 208 159);
 }
 
 .settings-region {
@@ -23,6 +24,10 @@
 
 .delete-icon {
     cursor: pointer;
+}
+
+.delete-icon:hover {
+    color: red;
 }
 
 .favButton svg{
