--- a/src/MySells/MySells.css
+++ b/src/MySells/MySells.css
@@ -21,12 +21,15 @@
 
 .heading-display {
     margin-top: 20px;
+    margin-bottom: 20px;
     text-align: center;
 }
 
 .text-and-switch {
     display: flex;
     justify-content: center;
+    width: 60%;
+    margin: auto;
 }
 
 .toggle-complete-sells {
@@ -42,6 +45,23 @@
     color: #7191af;
 }
 
+.nav-menu {
+    margin-bottom: 20px;
+    text-align: center;
+    width: 100%;
+}
+
+.nav-menu .tab {
+    width: auto;
+    font-weight: bold;
+    margin: auto;
+    
+}
+
+.nav-menu .tab.Mui-selected span {
+    color: rgb(30 94 155);
+}
+
 @media ( max-width: 650px ) {
     .text-and-switch {
         flex-flow: column;
@@ -51,4 +71,23 @@
         position: static;
         margin: 10px 0;
     }
+}
+
+@media ( max-width: 750px ) {
+    .tabs .MuiTabs-flexContainer {
+        flex-flow: column;
+    }
+
+    .nav-menu .tab {
+        margin-bottom: 4px;
+    }
+
+    .nav-menu .tab:first-child {
+        border-bottom: 1px solid black;
+    }
+
+    .MuiTabs-flexContainer + span {
+        display: none;
+    }
+
 }
