--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -18,6 +18,7 @@
     margin-top: 30px;
     left: 50%;
     transform: translate(-50%, -50%);
+    top: 15%;
 }
 
 .google-account-info {
@@ -29,6 +30,7 @@
 
 .google-account-info .acc-chip {
     background-color: #e2d8af;
+    border-radius: 6px;
 }
 
 @media (max-width: 580px) {
