--- a/src/UI/BulkImagePreview/BulkImagePreview.css
+++ b/src/UI/BulkImagePreview/BulkImagePreview.css
@@ -3,6 +3,10 @@
     margin-top: 10px;
 }
 
+.preview-images img {
+  cursor: zoom-in;
+}
+
 .images-chips {
     display: flex;
     flex-flow: column;
@@ -18,21 +22,15 @@
     background-color:#f2c40c !important;
 }
 
-.img-zoom-container {
-    position: relative;
-  }
-  
-  .img-zoom-lens {
-    position: absolute;
-    border: 1px solid #d4d4d4;
-    /*set the size of the lens:*/
-    width: 40px;
-    height: 40px;
-  }
-  
-  .img-zoom-result {
-    border: 1px solid #d4d4d4;
-    /*set the size of the result div:*/
-    width: 300px;
-    height: 300px;
-  }
+.preview-images img.img-clicked {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 999;
+  height: 98vh;
+  top: 0;
+  width: auto;
+  cursor: zoom-out;
+  max-width: 100vw;
+}
+
