styled material ui popups

--- a/src/UI/Spinner.scss
+++ b/src/UI/Spinner.scss
@@ -2,4 +2,6 @@
 
 .spinner-default {
     color: $blue-color-flag !important;
+    margin-top: 10px !important;
+    margin-bottom: 10px !important;
 }
