--- a/src/MySells/MySells.css
+++ b/src/MySells/MySells.css
@@ -62,32 +62,47 @@
     color: rgb(30 94 155);
 }
 
+.breadcrumb {
+    display: flex;
+}
+
+.breadcrumb .breadcrumb-link {
+    color: black;
+    font-size: medium;
+    cursor: pointer;
+    font-size: 1.5rem;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
+    line-height: 1.235;
+    letter-spacing: 0.00735em;
+}
+
+.breadcrumb .breadcrumb-link:hover, .breadcrumb .breadcrumb-link {
+    text-decoration: none;
+}
+
+.breadcrumb .breadcrumb-link.active {
+    font-weight: bold; 
+}
+
 @media ( max-width: 650px ) {
     .text-and-switch {
         flex-flow: column;
+        width: fit-content;
     }
 
     .toggle-complete-sells {
         position: static;
         margin: 10px 0;
     }
-}
 
-@media ( max-width: 750px ) {
-    .tabs .MuiTabs-flexContainer {
-        flex-flow: column;
+    .breadcrumb .breadcrumb-link {
+        font-size: 0.8rem; 
     }
 
-    .nav-menu .tab {
-        margin-bottom: 4px;
+    .breadcrumb .breadcrumb-link.active {
+        font-size: 1rem; 
+        font-weight: bold;
     }
-
-    .nav-menu .tab:first-child {
-        border-bottom: 1px solid black;
-    }
-
-    .MuiTabs-flexContainer + span {
-        display: none;
-    }
-
+    
 }
