--- a/src/MySells/MySells.scss
+++ b/src/MySells/MySells.scss
@@ -1,3 +1,5 @@
+@import '../App.scss';
+
 .my-sells {
     width: 80%;
     margin: auto;
@@ -51,38 +53,24 @@
     width: 100%;
 }
 
-.nav-menu .tab {
-    width: auto;
-    font-weight: bold;
-    margin: auto;
-    
-}
-
-.nav-menu .tab.Mui-selected span {
-    color: rgb(30 94 155);
-}
-
 .breadcrumb {
     display: flex;
 }
 
 .breadcrumb .breadcrumb-link {
-    color: black;
-    font-size: medium;
     cursor: pointer;
-    font-size: 1.5rem;
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-    font-weight: 400;
-    line-height: 1.235;
-    letter-spacing: 0.00735em;
 }
 
-.breadcrumb .breadcrumb-link:hover, .breadcrumb .breadcrumb-link {
-    text-decoration: none;
+.heading-display .no-data-text-display {
+    margin-top: 30px;
 }
 
 .breadcrumb .breadcrumb-link.active {
     font-weight: bold; 
+}
+
+.switch-completas span.MuiFormControlLabel-label {
+    font-size: $font-size-small;
 }
 
 @media ( max-width: 650px ) {
@@ -95,14 +83,4 @@
         position: static;
         margin: 10px 0;
     }
-
-    .breadcrumb .breadcrumb-link {
-        font-size: 0.8rem; 
-    }
-
-    .breadcrumb .breadcrumb-link.active {
-        font-size: 1rem; 
-        font-weight: bold;
-    }
-    
 }
