--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -19,6 +19,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     top: 15%;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .google-account-info {
