--- a/src/NovaVenda/NovaVenda.scss
+++ b/src/NovaVenda/NovaVenda.scss
@@ -1,3 +1,5 @@
+@import '../App.scss';
+
 .new-sell {
     display: flex;
     flex-flow: column;
@@ -60,6 +62,10 @@
 .heading {
     margin-top: 20px;
     text-align: center;
+}
+
+.heading h4 {
+    font-size: $font-size-big;
 }
 
 .new-sell .spinner-my-sells {
