--- a/src/NovaVenda/NovaVenda.scss
+++ b/src/NovaVenda/NovaVenda.scss
@@ -52,6 +52,7 @@
     width: fit-content;
     margin: auto;
     margin-top: 20px;
+    margin-bottom: 30px;
     background-color: #1e5e9b;
 }
 
@@ -70,4 +71,5 @@
 
 .new-sell .spinner-my-sells {
     margin: auto;
+    margin-bottom: 30px !important;
 }
