bug fix + other sells enhanced implementation
bug fix on like sell
other sells use array returned from algolia on hompage fetch

--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -68,3 +68,11 @@
 .load-more-icon:hover {
     background-color: #71a4d4;
 }
+
+#recommendation-container {
+    display: flex;
+}
+
+#button-recommendation-help {
+    padding-top: 0;
+}
