--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -1,78 +1,84 @@
 .homepage-content {
-    display: flex;
-    flex-flow: column;
-    margin: auto;
-    width: 80%;
-    margin-top: 20px;
-    align-items: center;
+  display: flex;
+  flex-flow: column;
+  margin: auto;
+  width: 80%;
+  margin-top: 20px;
+  align-items: center;
 }
 
 .homepage-buttons {
-    display: flex;
-    margin-bottom: 30px;
+  display: flex;
+  margin-bottom: 30px;
 }
 
 .homepage-buttons .buttons {
-    margin: 3px;
-    width: 100%;
-    color: white;
-} 
+  margin: 3px;
+  width: 100%;
+  color: white;
+}
 
-.buttons.blue, .buttons.login {
-    background-color: #1e5e9b;
+.buttons.blue,
+.buttons.login {
+  background-color: #1e5e9b;
 }
 
 .buttons.yellow {
-    background-color: #f1c000;
+  background-color: #f1c000;
 }
 
-.buttons.blue:hover, .buttons.login:hover {
-    background-color: #71a4d4;
+.buttons.blue:hover,
+.buttons.login:hover {
+  background-color: #71a4d4;
 }
 
 .buttons.yellow:hover {
-    background-color: #decd8a;
+  background-color: #decd8a;
 }
-    
+
 .buttons.login.clicked {
-    pointer-events: none;
+  pointer-events: none;
 }
 
 .sells-content {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .login-display {
-    display: flex;
-    flex-flow: column;
+  display: flex;
+  flex-flow: column;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .login-display img {
-    width: 100%;
+  width: 100%;
 }
 
 .horizontal-break {
-    width: 90%;
+  width: 90%;
 }
 
 .load-more-icon {
-    margin-bottom: 40px;
-    cursor: pointer;
-    background-color: #1e5e9b;
-    border-radius: 100%;
-    color: white;
+  margin-bottom: 40px;
+  cursor: pointer;
+  background-color: #1e5e9b;
+  border-radius: 100%;
+  color: white;
 }
 
 .load-more-icon:hover {
-    background-color: #71a4d4;
+  background-color: #71a4d4;
 }
 
 #recommendation-container {
-    display: flex;
+  display: flex;
 }
 
 #button-recommendation-help {
-    padding-top: 0;
+  padding-top: 0;
 }
