--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -1,50 +1,46 @@
 .navbar {
-    height: 75px;
-    background-color: #91c7fb;
-    text-align: center;
-    color: black;
-    position: sticky;
-    top: 0;
-    z-index: 999;
-    box-shadow: inset 3px 10px 20px 0px white;
-}
-
-.navbar img {
-    float: left;
+  height: 10vh;
+  background-color: #91c7fb;
+  text-align: center;
+  color: black;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .navbar .navbar-heading {
-    position: absolute;
-    margin-top: 30px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    top: 15%;
-    font-family: 'Josefin Sans', sans-serif;
-}
-
-.google-account-info {
-    display: flex;
-    margin-top: 20px;
-    float: right;
-    margin-right: 15px;
+  font-family: "Josefin Sans", sans-serif;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .google-account-info .acc-chip {
-    background-color: #e2d8af;
-    border-radius: 6px;
+  background-color: #e2d8af;
+  border-radius: 6px;
+}
+
+.navbar.buttons.blue {
+  color: white;
+  background-color: #1e5e9b;
+  margin-right: 5px;
+  height: fit-content;
 }
 
 @media (max-width: 580px) {
-    .google-account-info .acc-chip span {
-        display: none;
-        visibility: hidden;
-    }
+  .google-account-info .acc-chip span {
+    display: none;
+    visibility: hidden;
+  }
 
-    .google-account-info .acc-chip {
-        width: 60px;
-    }
+  .google-account-info .acc-chip {
+    width: 60px;
+  }
 
-    .google-account-info .acc-ava {
-        margin-right: 10px !important;
-    }
+  .google-account-info .acc-ava {
+    margin-right: 10px !important;
+  }
 }
